tilt/tyk/operator/deployment/all.yaml
---
# Source: tyk-operator/templates/all.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: tyk-operator-controller-manager
  name: tyk-operator-controller-manager-metrics-service
  namespace: tyk
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    control-plane: tyk-operator-controller-manager
---
# Source: tyk-operator/templates/all.yaml
apiVersion: v1
kind: Service
metadata:
  name: tyk-operator-webhook-service
  namespace: tyk
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    control-plane: tyk-operator-controller-manager
---
# Source: tyk-operator/templates/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: tyk-operator-controller-manager
  name: tyk-operator-controller-manager
  namespace: tyk
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: tyk-operator-controller-manager
  template:
    metadata:
      labels:
        control-plane: tyk-operator-controller-manager
    spec:
      containers:
      - args:
        - --config=controller_manager_config.yaml
        command:
        - /manager
        image: tykio/tyk-operator:v0.18.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
        
        - mountPath: /controller_manager_config.yaml
          name: manager-config
          subPath: controller_manager_config.yaml
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=10
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.8.0
        imagePullPolicy: IfNotPresent
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
      hostNetwork: false
      securityContext:
        runAsNonRoot: true
      serviceAccountName: tyk-operator-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
      
      - configMap:
          name: tyk-operator-manager-config
        name: manager-config
---
# Source: tyk-operator/templates/all.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: tyk/tyk-operator-serving-cert
  name: tyk-operator-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: tyk-operator-webhook-service
      namespace: tyk
      path: /mutate-tyk-tyk-io-v1alpha1-apidefinition
  failurePolicy: Fail
  name: mapidefinition.kb.io
  rules:
  - apiGroups:
    - tyk.tyk.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - apidefinitions
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: tyk-operator-webhook-service
      namespace: tyk
      path: /mutate-tyk-tyk-io-v1alpha1-securitypolicy
  failurePolicy: Fail
  name: msecuritypolicy.kb.io
  rules:
  - apiGroups:
    - tyk.tyk.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - securitypolicies
  sideEffects: None
---
# Source: tyk-operator/templates/all.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: tyk/tyk-operator-serving-cert
  name: tyk-operator-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: tyk-operator-webhook-service
      namespace: tyk
      path: /validate-tyk-tyk-io-v1alpha1-apidefinition
  failurePolicy: Fail
  name: vapidefinition.kb.io
  rules:
  - apiGroups:
    - tyk.tyk.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - apidefinitions
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: tyk-operator-webhook-service
      namespace: tyk
      path: /validate-tyk-tyk-io-v1alpha1-securitypolicy
  failurePolicy: Fail
  name: vsecuritypolicy.kb.io
  rules:
  - apiGroups:
    - tyk.tyk.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - securitypolicies
  sideEffects: None
